syntax = "proto3";

option csharp_namespace = "FurnitureShop.Core.Shop.Api.Contracts";

package furnitureCatalog;

import "annotations.proto";

service FurnitureCatalog {
  rpc ShowFurnitureCatalog (ShowFurnitureCatalogRequest) returns (Catalog) {
    option (google.api.http) = {
      get: "/api/furniture-catalog"
    };
  }
}

message ShowFurnitureCatalogRequest { }

message Catalog {
  string Title = 1;
}